2007-01-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (main): fix small bug where extensions were
	not being correctly recognized.

2007-01-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (xiter): Make sure that iterating
	a string containing a single line yields the string itself as the
	only item.

	* IPython/Extensions/ibrowse.py (ibrowse): Avoid entering an
	object if it's the same as the one on the last level (This avoids
	infinite recursion for one line strings).

2007-01-17  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ultraTB.py (AutoFormattedTB.__call__): properly flush
	all output streams before printing tracebacks.  This ensures that
	user output doesn't end up interleaved with traceback output.

2007-01-10  Ville Vainio  <vivainio@gmail.com>

	* Extensions/envpersist.py: Turbocharged %env that remembers
	env vars across sessions; e.g. "%env PATH+=;/opt/scripts" or
	"%env VISUAL=jed".

2007-01-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (showtraceback): ensure that we correctly call
	custom handlers in all cases (some with pdb were slipping through,
	but I'm not exactly sure why).

	* IPython/Debugger.py (Tracer.__init__): added new class to
	support set_trace-like usage of IPython's enhanced debugger.

2006-12-24  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: more informative message when ipy_user_conf
	import fails (suggest running %upgrade).
	
	* tools/run_ipy_in_profiler.py: Utility to see where
	the time during IPython startup is spent.
	
2006-12-20  Ville Vainio  <vivainio@gmail.com>

	* 0.7.3 is out - merge all from 0.7.3 branch to trunk

	* ipapi.py: Add new ipapi method, expand_alias.
	
	* Release.py: Bump up version to 0.7.4.svn

2006-12-17  Ville Vainio  <vivainio@gmail.com>

	* Extensions/jobctrl.py: Fixed &cmd arg arg... 
	to work properly on posix too
	
	* Release.py: Update revnum (version is still just 0.7.3).
